--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "numpy>=2.3.3",
     "pandas>=2.3.2",
     "torch>=2.8.0",
+    "torchinfo>=1.8.0",
     "torchmetrics>=1.8.2",
 ]
