--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "matplotlib>=3.10.6",
     "numpy>=2.3.3",
     "pandas>=2.3.2",
+    "scikit-learn>=1.7.2",
     "torch>=2.8.0",
     "torchinfo>=1.8.0",
     "torchmetrics>=1.8.2",
