--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,15 @@
 [project]
 name = "pytorch-rnn-timeseries-bikes"
 version = "0.1.0"
-description = "Add your description here"
+description = "PyTorch RNN (LSTM) model for time series task for 'Bike Sharing in Washington D.C.' dataset"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "kaggle>=1.7.4.5",
+    "datasets>=4.1.1",
     "matplotlib>=3.10.6",
     "numpy>=2.3.3",
     "pandas>=2.3.2",
+    "safetensors>=0.6.2",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
     "torch>=2.8.0",
